tree-sitter/grammar.js
    source_file: $ => seq(
      $.module_declaration,
      repeat($.import_declaration),
      repeat($._declaration),
    ),

    // ========== MODULE DECLARATION ==========
    module_declaration: $ => seq(
      'module',
      field('name', $.module_identifier),
      field('exports', $.exposing_list),
    ),

    // Module identifier: composed of type_identifiers joined by dots
    // We parse it as a sequence rather than a regex to avoid token conflicts
    module_identifier: $ => prec.right(seq(
      $._module_segment,
      repeat(seq('.', $._module_segment)),
    )),

    // Module segment: reuse type_identifier token to avoid conflicts
    _module_segment: $ => $.type_identifier,

    exposing_list: $ => seq(
      'exposing',
      '(',
      sepBy(',', $.exposing_item),
      ')',
    ),

    exposing_item: $ => choice(
      seq(
        field('name', $.type_identifier),
        optional($.expose_all),
      ),
      field('name', $.identifier),
      field('name', $.operator_identifier),
    ),

    _declaration: $ => choice(
      $.type_declaration,
      $.type_alias_declaration,
      $.newtype_declaration,
      $.class_declaration,
      $.instance_declaration,
      $.foreign_import_declaration,
      $.type_signature,
      $.function_declaration,
      $.annotated_declaration,
    ),

    // Annotation (@derive, @primaryKey, etc.)
    // Use token.immediate to ensure ( is parsed with the annotation
    annotation: $ => seq(
      '@',
      field('name', $.identifier),
      optional(seq(
        token.immediate('('),
        field('arguments', $._annotation_arguments),
        ')',
      )),
    ),

    _annotation_arguments: $ => repeat1($._annotation_atom),

    // Annotation arguments - use constructor_identifier to avoid module_identifier conflict
    annotated_declaration: $ => seq(
      repeat1($.annotation),
      choice(
        $.type_alias_declaration,
        $.function_declaration,
      ),
    ),

    // Type declaration: type Bool = True | False
    type_alias_declaration: $ => seq(
      'type',
      'alias',
      field('name', $.type_identifier),
      field('parameters', repeat($.type_variable)),
      '=',
      field('type', $._type),
    ),

    // Newtype: newtype Parser a = Parser (String -> Maybe (a, String))
    function_declaration: $ => seq(
      field('name', $._function_name),
      field('parameters', repeat($._pattern_atom)),
      '=',
      field('body', $._expression),
    ),

    _function_name: $ => choice(
      $.identifier,
      $.operator_identifier,
    ),

    _type: $ => $.function_type,

    function_type: $ => prec.right(PREC.ARROW, sepBy1('->', $.type_application)),

    // Type application: binary left-associative like Haskell tree-sitter
    // f a b parses as ((f a) b) rather than f (a, b)
    type_application: $ => choice(
      prec.left(PREC.CALL, seq(
        field('constructor', $.type_application),
        field('argument', $._type_atom),
      )),
      $._type_atom,
    ),

    _type_atom: $ => choice(
      $.type_identifier,
      $.type_variable,
      $.record_type,
      $.parenthesized_type,
      $.tuple_type,
      $.unit_type,
    ),

    record_type: $ => seq(
      '{',
      sepBy(',', $.record_type_field),
      '}',
    ),

    record_type_field: $ => seq(
      field('name', $.identifier),
      ':',
      field('type', $._type),
      repeat($.field_annotation),
    ),

    field_annotation: $ => seq(
      '@',
      field('name', $.identifier),
      optional(seq(
        '(',
        $._annotation_arguments,
        ')',
      )),
    ),

    // Uppercase identifier: used for type names and constructor names
    // Both share the same token - they're semantically distinguished by context
    _upper_identifier: $ => /[A-Z][a-zA-Z0-9_#]*/,
    type_identifier: $ => alias($._upper_identifier, $.type_identifier),
    // Type variables use external scanner to avoid consuming function declarations
    constructor_identifier: $ => alias($._upper_identifier, $.constructor_identifier),

    // ========== EXPRESSIONS ==========
    _expression: $ => choice(
      $.let_expression,
      $.case_expression,
      $.lambda_expression,
      $.do_expression,
      $.if_expression,
      $._binary_expression,
    ),

    _binary_expression: $ => choice(
      $.backward_pipe_expression,
      $.forward_pipe_expression,
      $.binary_expression,
      $._application_expression,
    ),

    binary_expression: $ => prec.left(PREC.CONCAT, seq(
      field('left', $._application_expression),
      field('operator', $.operator),
      field('right', $._binary_expression),
    )),

    _application_expression: $ => choice(
      $.function_application,
      $._accessor_expression,
    ),

    function_application: $ => prec.left(PREC.CALL, seq(
      field('function', $._accessor_expression),
      field('arguments', repeat1($._accessor_expression)),
    )),

    _accessor_expression: $ => choice(
      $.field_access_expression,
      $._primary_expression,
    ),

    field_access_expression: $ => prec.left(PREC.FIELD, seq(
      field('value', $._primary_expression),
      repeat1(seq('.', field('field', $.identifier))),
    )),

    _primary_expression: $ => choice(
      $._expr_identifier,
      $.qualified_identifier,
      $._expr_constructor,
      $.integer_literal,
      $.float_literal,
      $.char_literal,
      $.string_literal,
      $.multiline_string,
      $.list_expression,
      $.record_expression,
      $.record_update_expression,
      $.parenthesized_expression,
      $.tuple_expression,
      $.unit_expression,
      $.operator_section,
    ),

    // Identifier in expression context (via external scanner)
    // Alias to 'identifier' so it shows as a named node in the parse tree
    parenthesized_expression: $ => seq('(', $._expression, ')'),

    tuple_expression: $ => seq(
      '(',
      $._expression,
      repeat1(seq(',', $._expression)),
      ')',
    ),

    unit_expression: $ => seq('(', ')'),

    operator_section: $ => seq(
      '(',
      $.operator,
      ')',
    ),

    // Let expression
    let_expression: $ => seq(
      'let',
      repeat1($.let_binding),
      'in',
      field('body', $._expression),
    ),

    let_binding: $ => seq(
      field('name', $.identifier),
      '=',
      field('value', $._expression),
    ),

    // Case expression - uses virtual tokens to separate alternatives
    case_expression: $ => prec.right(seq(
      'case',
      field('scrutinee', $._expression),
      'of',
      $._virtual_open_section,  // Opens layout block
      field('alternatives', $.case_alternative),
      field('alternatives', repeat(seq($._virtual_end_decl, $.case_alternative))),
      optional($._virtual_end_section),
    )),

    case_alternative: $ => seq(
      field('pattern', $._pattern),
      '->',
      field('body', $._expression),
    ),

    // Lambda expression
    lambda_expression: $ => seq(
      '\\',
      field('parameters', repeat1($._pattern_atom)),
      '->',
      field('body', $._expression),
    ),

    // Do expression - uses virtual tokens to separate statements
    do_expression: $ => prec.right(seq(
      'do',
      $._virtual_open_section,  // Opens layout block
      field('statements', $._statement),
      field('statements', repeat(seq($._virtual_end_decl, $._statement))),
      optional($._virtual_end_section),
    )),

    _statement: $ => choice(
      $.bind_statement,
      $.let_statement,
      $.expression_statement,
    ),

    bind_statement: $ => seq(
      field('pattern', $._pattern),
      '<-',
      field('value', $._expression),
    ),

    // In do-blocks, let without 'in' is a statement (higher precedence)
    let_statement: $ => prec(1, seq(
      'let',
      field('name', $.identifier),
      '=',
      field('value', $._expression),
    )),

    expression_statement: $ => $._expression,

    // If expression
    if_expression: $ => seq(
      'if',
      field('condition', $._expression),
      'then',
      field('consequence', $._expression),
      'else',
      field('alternative', $._expression),
    ),

    // List expression
    list_expression: $ => seq(
      '[',
      sepBy(',', $._expression),
      ']',
    ),

    // Record expression
    record_expression: $ => seq(
      '{',
      sepBy(',', $.record_field),
      '}',
    ),

    record_field: $ => seq(
      field('name', $.identifier),
      '=',
      field('value', $._expression),
    ),

    // Record update: { base | field = value }
    record_update_expression: $ => seq(
      '{',
      field('base', $.identifier),
      '|',
      sepBy1(',', $.record_field),
      '}',
    ),

    // ========== PATTERNS ==========
    _pattern: $ => choice(
      $.constructor_pattern,
      $._pattern_atom,
    ),

    // Constructor pattern with arguments needs lower precedence than function application
    // so expressions win in ambiguous contexts (like do-blocks before seeing <-)
    _pattern_atom: $ => choice(
      $.wildcard_pattern,
      $.variable_pattern,
      $.literal_pattern,
      $.list_pattern,
      $.tuple_pattern,
      $.parenthesized_pattern,
      $.record_pattern,
      $.nullary_constructor_pattern,
    ),

    // Nullary constructor pattern - needs lower precedence than expressions
    nullary_constructor_pattern: $ => prec(-2, $.constructor_identifier),

    variable_pattern: $ => prec(-2, alias($._identifier_ext, $.identifier)),

    // Lower precedence than expressions so they win in ambiguous contexts
    identifier: $ => $._identifier_token,

    // The word token - this must be an internal regex for tree-sitter keyword handling
    _identifier_token: $ => /[a-z_][a-zA-Z0-9_]*/,

    integer_literal: $ => choice(
      /0[xX][0-9a-fA-F]+/,
      /0[oO][0-7]+/,
      /0[bB][01]+/,
      /[0-9]+/,
    ),

    string_literal: $ => seq(
      '"',
      repeat(choice(
        $.escape_sequence,
        alias($._string_content, $.string_content),
        $.interpolation,
      )),
      '"',
    ),

    // Content inside strings - avoid ", \, and $ (start of interpolation)
    _string_content: $ => token.immediate(prec(1, /[^"\\$]+/)),

    operator: $ => choice(
      '<>',
      '++',
      '&&',
      '||',
      '==',
      '/=',
      '<=',
      '>=',
      '<',
      '>',
      '+',
      '-',
      '*',
      '/',
      '^',
      '|>',
      '<|',
      '>>',
      '<<',
      '$',
    ),

    // ========== COMMENTS ==========
